# happ-template

./: .gitignore  .hcignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  default.nix  manifest.json  shell.nix
.circleci/: config.yml
test/: config.js  index.js  package-lock.json  package.json  smoke.js
zomes/example/code/: .hcbuild  Cargo.toml
zomes/example/code/src/: lib.rs
