[package]
name = "example"
version = "0.0.0"
edition = "2018"

[dependencies]
boolinator = "2.4.0"
hdk = { path = "../../../holochain-rust/crates/hdk" }
holochain_wasm_utils = { path = "../../../holochain-rust/crates/wasm_utils" }
holochain_json_derive = "=0.0.17"
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = [ "preserve_order" ] }
serde_derive = "=1.0.89"

[lib]
crate-type = [ "cdylib" ]
path = "src/lib.rs"
